# subject_randomizer

./: .gitignore  Cargo.toml  Dioxus.toml  clippy.toml  pharma_subs.db
assets/: main.css
src/: main.rs
src/errors/: err.rs  mod.rs
src/handles/: db_init.rs  mod.rs  randomize.rs
src/structs/: cli.rs  mod.rs  module.rs  state.rs
src/ui/: application.rs  card_ui.rs  mod.rs
ui/: main.slint
