[package]
name = "subject_randomizer"
version = "0.1.0"
edition = "2024"


[dependencies]
clap = { version = "4.6.1", features = ["cargo", "derive"] }
dotenvy = "0.15.7"
rand = "0.10.1"
rusqlite = "0.39.0"
thiserror = "2.0.18"
dioxus = { version = "0.7.9", features = [] }
tokio = { version = "1", features = ["rt", "time"] }
[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[lints.rust]
unused_imports = "allow"


