[package]
name = "subject_randomizer"
version = "0.1.0"
edition = "2024"


[dependencies]
clap = { version = "4.6.1", features = ["cargo", "derive"] }
dotenvy = "0.15.7"
rand = "0.10.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
thiserror = "2.0.18"
dioxus = { version = "0.7.9", features = [] }
tokio = { version = "1", features = ["rt", "time"] }
dirs = "6.0.0"
image = "0.25"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[target.x86_64-linux-android]
rustflags = ["-C", "link-arg=-Wl,-z,max-page-size=16384"]

[target.aarch64-linux-android]
rustflags = ["-C", "link-arg=-Wl,-z,max-page-size=16384"]

[target.armv7-linux-androideabi]
rustflags = ["-C", "link-arg=-Wl,-z,max-page-size=16384"]

[target.i686-linux-android]
rustflags = ["-C", "link-arg=-Wl,-z,max-page-size=16384"]